# University

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  metadata.py  pyproject.toml  requirements.txt
config/: settings.py  urls.py
user/: views.py
user/templates/user/: index.html
